--- a/src/components/style/portinfo.less
+++ b/src/components/style/portinfo.less
@@ -81,8 +81,14 @@
   h6 {
     text-align: left;
     margin-left: 2%;
+    //line-height: 20px;
     margin-bottom: 10px;
   }
+
+  .active-calendar{
+    display: inline;
+  }
+
 
   .popover {
     display: flex;
