重新设计banner和logo

--- a/src/components/style/portinfo.less
+++ b/src/components/style/portinfo.less
@@ -24,6 +24,16 @@
     height: 100px;
     width: 100%;
   }
+
+  .logo {
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 150px;
+    height: 100px;
+
+  }
 }
 
 .datepicker {
