--- a/src/components/style/portinfo.less
+++ b/src/components/style/portinfo.less
@@ -5,7 +5,7 @@
 @red-border: 3px #CB2220 solid;
 @border-size: 3px;
 
-@detail-width: 320px;
+@detail-width: 340px;
 
 .layout {
   position: relative;
@@ -15,7 +15,7 @@
   font-family: Arial, "Kaiti SC", "Kaiti", monospace;
   padding: 0 0 1vh;
   color: black;
-  max-width: 1000px;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
@@ -33,9 +33,10 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 150px;
-    height: 100px;
-
+    width: 20vw;
+    height: 15vw;
+    max-width: 150px;
+    max-height: 100px;
   }
 }
 
@@ -50,6 +51,9 @@
   z-index: 1;
   top: 60px;
   left: 25%;
+  overflow: hidden;
+  text-overflow:ellipsis;
+  white-space: nowrap;
 
   h3 {
     color: white;
@@ -58,6 +62,7 @@
     margin-left: 10px;
     cursor: pointer;
     text-align: left;
+
     &:hover{
       transform: scaleY(1.2);
     }
@@ -65,10 +70,7 @@
 
   p {
     color: white;
-    font-size: xx-small;
-    overflow: hidden;
-    text-overflow:ellipsis;
-    white-space: nowrap;
+    font-size: small;
     margin-right: 10px;
   }
 }
