--- a/src/components/style/portinfo.less
+++ b/src/components/style/portinfo.less
@@ -85,16 +85,16 @@
   flex-wrap: wrap;
 
   .card1 {
-    width: 45%;
+    width: 47%;
     min-width: 350px;
-    max-width: 475px;
+    max-width: 500px;
     margin: 5px 0;
   }
 
   .card2  {
-    width: 45%;
+    width: 47%;
     min-width: 350px;
-    max-width: 475px;
+    max-width: 500px;
     margin: 5px 0;
   }
 }
@@ -102,11 +102,24 @@
 
 .simple-describe {
   border: @red-border;
-  h6 {
-    text-align: left;
-    margin-left: 2%;
-    //line-height: 20px;
-    margin-bottom: 10px;
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+
+    h6 {
+      text-align: left;
+      margin-left: 2%;
+      line-height: 30px;
+      margin-bottom: 10px;
+    }
+
+    p {
+      text-align: right;
+      margin-right: 2%;
+      line-height: 30px;
+      margin-bottom: 10px;
+    }
   }
 
   .active-calendar{
@@ -159,7 +172,7 @@
 footer {
   text-align: left;
   margin-left: 5%;
-  font-size: xx-small;
+  font-size: small;
   color: #737373;
 }
 
@@ -172,12 +185,11 @@ footer {
 }
 
 button {
-  margin: 0;
+  margin: 5px 0 0;
   padding: 4px 5px 1px;
   border-radius: 0;
   background: #efefef;
   border: 0;
-  font-size: 10px;
   border-bottom: 4px #efefef solid;
   cursor: pointer;
   font-family: Arial, "Kaiti SC", 'Kaiti', sans-serif;
