--- a/src/components/style/portinfo.less
+++ b/src/components/style/portinfo.less
@@ -144,8 +144,7 @@
     justify-content: space-around;
 
     .item {
-      //width: 100px;
-      //min-width: 80px;
+      width: 80px;
       display: inline-block;
       text-align: center;
       &:hover{
