--- a/src/components/style/portinfo.less
+++ b/src/components/style/portinfo.less
@@ -17,7 +17,7 @@
     padding: 0 0 1vh;
     color: black;
     max-width: 1100px;
-    margin: 0 auto;
+    margin: 0 auto 5px;
   }
 
   .banner {
@@ -263,7 +263,7 @@
     padding: 0 0 1vh;
     color: black;
     max-width: 1100px;
-    margin: 0 auto;
+    margin: 0 auto 5px;
   }
 
   .banner {
