调整响应式布局

--- a/src/assets/style/portinfo.less
+++ b/src/assets/style/portinfo.less
@@ -193,6 +193,7 @@
     cursor: pointer;
     font-family: Arial, "Kaiti SC", 'Kaiti', sans-serif;
     color: gray;
+    font-size: 12px;
 
     &:hover{
       font-weight: bold;
