--- a/src/assets/style/portinfo.less
+++ b/src/assets/style/portinfo.less
@@ -106,12 +106,14 @@
     .header {
       display: flex;
       justify-content: space-between;
+      background-color: #CC2220;
 
       h6 {
         text-align: left;
         margin-left: 2%;
         line-height: 30px;
-        margin-bottom: 10px;
+        margin-bottom: 0;
+        color: white;
       }
 
       p {
@@ -142,6 +144,7 @@
       margin-right: 0;
       text-align: justify;
       justify-content: space-around;
+      margin-top: 15px;
 
       .item {
         width: 80px;
