--- a/src/assets/style/portinfo.less
+++ b/src/assets/style/portinfo.less
@@ -7,249 +7,252 @@
 
 @detail-width: 340px;
 
-  .layout {
-    position: relative;
-    border: @red-border;
-    width: 100%;
-    text-align: center;
-    font-family: Arial, "Kaiti SC", "Kaiti", monospace;
-    padding: 0 0 1vh;
-    color: black;
-    max-width: 1100px;
-    margin: 0 auto 5px;
-  }
+.layout {
+  position: relative;
+  border: @red-border;
+  width: 100%;
+  text-align: center;
+  font-family: Arial, "Kaiti SC", "Kaiti", monospace;
+  padding: 0 0 1vh;
+  color: black;
+  max-width: 1100px;
+  margin: 0 auto 5px;
+}
 
-  .banner {
+.banner {
+  height: 100px;
+  width: 100%;
+  padding: 1px;
+  .image {
     height: 100px;
     width: 100%;
-    padding: 1px;
-    .image {
-      height: 100px;
-      width: 100%;
-    }
-
-    .logo {
-      z-index: 1;
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 20vw;
-      height: 15vw;
-      max-width: 150px;
-      max-height: 100px;
-    }
   }
 
-  .datepicker {
-    position: fixed;
-    left: -20px;
-    z-index: 3;
-  }
-
-  .page-title {
-    position: absolute;
+  .logo {
     z-index: 1;
-    top: 60px;
-    left: 25%;
-    overflow: hidden;
-    text-overflow:ellipsis;
-    white-space: nowrap;
-
-    h3 {
-      color: white;
-      line-height: 20px;
-      letter-spacing: 1px;
-      margin-left: 10px;
-      cursor: pointer;
-      text-align: left;
-
-      &:hover{
-        transform: scaleY(1.2);
-      }
-    }
-
-    p {
-      color: white;
-      font-size: small;
-      margin-right: 10px;
-    }
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 20vw;
+    height: 15vw;
+    max-width: 150px;
+    max-height: 100px;
   }
+}
 
-  .performance {
-    display: flex;
-    width: 100%;
-    margin-top: 1%;
-    padding: 2px 0 2px 0;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
+.datepicker {
+  position: fixed;
+  left: -20px;
+  z-index: 3;
+}
 
-    .card1 {
-      width: 47%;
-      min-width: 350px;
-      max-width: 500px;
-      margin: 5px 0;
-    }
+.page-title {
+  position: absolute;
+  z-index: 1;
+  top: 60px;
+  left: 25%;
+  overflow: hidden;
+  text-overflow:ellipsis;
+  white-space: nowrap;
 
-    .card2  {
-      width: 47%;
-      min-width: 350px;
-      max-width: 500px;
-      margin: 5px 0;
-    }
-  }
-
-
-  .simple-describe {
-    border: @red-border;
-
-    .header {
-      display: flex;
-      justify-content: space-between;
-
-      h6 {
-        text-align: left;
-        margin-left: 2%;
-        line-height: 30px;
-        margin-bottom: 10px;
-      }
-
-      p {
-        text-align: right;
-        margin-right: 2%;
-        line-height: 30px;
-        margin-bottom: 10px;
-      }
-    }
-
-    .active-calendar{
-      display: inline;
-    }
-
-
-    .popover {
-      display: flex;
-      margin-left: 10px;
-      white-space: nowrap;
-      text-align: left;
-      justify-content: left;
-    }
-
-    .row{
-      display: flex;
-      padding: 0;
-      margin-left: 0;
-      margin-right: 0;
-      text-align: justify;
-      justify-content: space-around;
-
-      .item {
-        width: 80px;
-        display: inline-block;
-        text-align: center;
-        &:hover{
-          transform: scale(1.3);
-        }
-
-        h4 {
-          text-align: center;
-          font-size: large;
-        }
-        p {
-          font-size: small;
-        }
-      }
-    }
-
-    .row2 {
-      margin-top: 10px;
-      margin-bottom: 10px;
-      .row();
-    }
-  }
-
-  footer {
-    text-align: left;
-    margin-left: 5%;
-    font-size: small;
-    color: #737373;
-  }
-
-  .disclaimer {
-    text-align: left;
-    margin-left: 1%;
-    margin-top: 20px;
-    font-size: xx-small;
-    color: black;
-  }
-
-  button {
-    margin: 5px 0 0;
-    padding: 4px 5px 1px;
-    border-radius: 0;
-    background: #efefef;
-    border: 0;
-    border-bottom: 4px #efefef solid;
+  h3 {
+    color: white;
+    line-height: 20px;
+    letter-spacing: 1px;
+    margin-left: 10px;
     cursor: pointer;
-    font-family: Arial, "Kaiti SC", 'Kaiti', sans-serif;
-    color: gray;
-    font-size: 12px;
+    text-align: left;
 
     &:hover{
-      font-weight: bold;
+      transform: scaleY(1.2);
     }
-
-    &:focus{
-      outline: none;
-      color: black;
-      background: #F8F8FF;
-      font-weight: bold;
-    }
-
   }
 
-  .active{
-    outline: none;
-    color: black;
-    background: #F8F8FF;
+  p {
+    color: white;
+    font-size: small;
+    margin-right: 10px;
+  }
+}
+
+.performance {
+  display: flex;
+  width: 100%;
+  margin-top: 1%;
+  padding: 2px 0 2px 0;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+
+  .card1 {
+    width: 47%;
+    min-width: 350px;
+    max-width: 500px;
+    margin: 5px 0;
   }
 
-  .left {
-    padding-left: 4px;
-    border-radius: 5px 0 0 0;
+  .card2  {
+    width: 47%;
+    min-width: 350px;
+    max-width: 500px;
+    margin: 5px 0;
   }
+}
 
-  .right {
-    padding-right: 4px;
-    border-radius: 0 5px 0 0;
-  }
 
-  .detail {
-    border: unset;
-    margin-top: 10px;
+.simple-describe {
+  border: @red-border;
+
+  .header {
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-
-    .operations {
-      width: @detail-width;
-    }
-
-    hr {
-      margin-top: 3px;
-      margin-bottom: 3px;
-      height: 2px;
-      width: 100%;
-      padding-left: 2px;
-      background-color: #CB2220;
-      border: none;
-    }
+    justify-content: space-between;
+    background-color: #CC2220;
 
     h6 {
       text-align: left;
-      padding: 0;
+      margin-left: 2%;
+      line-height: 30px;
+      margin-bottom: 0;
+      color: white;
+    }
+
+    p {
+      text-align: right;
+      margin-right: 2%;
+      line-height: 30px;
+      margin-bottom: 10px;
     }
   }
+
+  .active-calendar{
+    display: inline;
+  }
+
+
+  .popover {
+    display: flex;
+    margin-left: 10px;
+    white-space: nowrap;
+    text-align: left;
+    justify-content: left;
+  }
+
+  .row{
+    display: flex;
+    padding: 0;
+    margin-left: 0;
+    margin-right: 0;
+    text-align: justify;
+    justify-content: space-around;
+    margin-top: 15px;
+
+    .item {
+      width: 80px;
+      display: inline-block;
+      text-align: center;
+      &:hover{
+        transform: scale(1.3);
+      }
+
+      h4 {
+        text-align: center;
+        font-size: large;
+      }
+      p {
+        font-size: small;
+      }
+    }
+  }
+
+  .row2 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    .row();
+  }
+}
+
+footer {
+  text-align: left;
+  margin-left: 5%;
+  font-size: small;
+  color: #737373;
+}
+
+.disclaimer {
+  text-align: left;
+  margin-left: 1%;
+  margin-top: 20px;
+  font-size: xx-small;
+  color: black;
+}
+
+button {
+  margin: 5px 0 0;
+  padding: 4px 5px 1px;
+  border-radius: 0;
+  background: #efefef;
+  border: 0;
+  border-bottom: 4px #efefef solid;
+  cursor: pointer;
+  font-family: Arial, "Kaiti SC", 'Kaiti', sans-serif;
+  color: gray;
+  font-size: 12px;
+
+  &:hover{
+    font-weight: bold;
+  }
+
+  &:focus{
+    outline: none;
+    color: black;
+    background: #F8F8FF;
+    font-weight: bold;
+  }
+
+}
+
+.active{
+  outline: none;
+  color: black;
+  background: #F8F8FF;
+}
+
+.left {
+  padding-left: 4px;
+  border-radius: 5px 0 0 0;
+}
+
+.right {
+  padding-right: 4px;
+  border-radius: 0 5px 0 0;
+}
+
+.detail {
+  border: unset;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+
+  .operations {
+    width: @detail-width;
+  }
+
+  hr {
+    margin-top: 3px;
+    margin-bottom: 3px;
+    height: 2px;
+    width: 100%;
+    padding-left: 2px;
+    background-color: #CB2220;
+    border: none;
+  }
+
+  h6 {
+    text-align: left;
+    padding: 0;
+  }
+}
 
 @media screen and (max-width: 480px) {
 
