--- a/src/assets/style/portinfo.less
+++ b/src/assets/style/portinfo.less
@@ -86,14 +86,14 @@
 
   .card1 {
     width: 47%;
-    min-width: 350px;
+    min-width: 400px;
     max-width: 500px;
     margin: 5px 0;
   }
 
   .card2  {
     width: 47%;
-    min-width: 350px;
+    min-width: 400px;
     max-width: 500px;
     margin: 5px 0;
   }
@@ -146,8 +146,29 @@
     justify-content: space-around;
     margin-top: 15px;
 
+    .highlight {
+      background: #E0B5B5;
+    }
+
     .item {
       width: 80px;
+      display: inline-block;
+      text-align: center;
+      &:hover{
+        transform: scale(1.3);
+      }
+
+      h4 {
+        text-align: center;
+        font-size: large;
+      }
+      p {
+        font-size: small;
+      }
+    }
+
+    .item2 {
+      width: 120px;
       display: inline-block;
       text-align: center;
       &:hover{
@@ -340,14 +361,14 @@ button {
 
     .card1 {
       width: 47%;
-      min-width: 350px;
+      min-width: 420px;
       max-width: 500px;
       margin: 5px 0;
     }
 
     .card2  {
       width: 47%;
-      min-width: 350px;
+      min-width: 420px;
       max-width: 500px;
       margin: 5px 0;
     }
@@ -365,7 +386,7 @@ button {
         text-align: left;
         margin-left: 2%;
         line-height: 30px;
-        margin-bottom: 10px;
+        margin-bottom: 0;
       }
 
       p {
