--- a/src/assets/style/portinfo.less
+++ b/src/assets/style/portinfo.less
@@ -331,7 +331,7 @@
       text-align: left;
 
       &:hover{
-        transform: scaleY(1.2);
+        //transform: scaleY(1.2);
       }
     }
 
@@ -423,7 +423,7 @@
         display: inline-block;
         text-align: center;
         &:hover{
-          transform: scale(1.3);
+          //transform: scale(1.3);
         }
 
         h4 {
