--- a/src/assets/style/portinfo.less
+++ b/src/assets/style/portinfo.less
@@ -47,7 +47,9 @@
     position: absolute;
     z-index: 1;
     top: 60px;
-    left: 45%;
+    right: 0;
+    width: 50%;
+    text-align: right;
     overflow: hidden;
     text-overflow:ellipsis;
     white-space: nowrap;
@@ -58,7 +60,7 @@
       letter-spacing: 1px;
       margin-left: 10px;
       cursor: pointer;
-      text-align: left;
+      text-align: right;
 
       &:hover{
         transform: scaleY(1.2);
@@ -319,6 +321,9 @@
     position: absolute;
     z-index: 1;
     top: 40px;
+    right: 0;
+    width: 50%;
+    text-align: right;
     overflow: hidden;
     text-overflow:ellipsis;
     white-space: nowrap;
@@ -329,7 +334,7 @@
       letter-spacing: 1px;
       margin-left: 10px;
       cursor: pointer;
-      text-align: left;
+      text-align: right;
 
       &:hover{
         //transform: scaleY(1.2);
